[workspace]
members = ["tgbr-core"]

[package]
name = "tgbr"
version = "0.1.0"
edition = "2021"
authors = ["Hideyuki Tanaka <tanaka.hideyuki@gmail.com>"]
license = "MIT"
description = "GameBoy emulator"
repository = "https://github.com/tanakh/tgbr"
readme = "README.md"
categories = ["emulators"]
keywords = ["emulators", "gameboy"]

[dependencies]
tgbr-core = { path = "tgbr-core", version = "0.1.0" }
anyhow = "1.0.55"
argopt = "0.3.0"
chrono = "0.4.19"
ciborium = "0.2.0"
directories = "4.0.1"
enum-iterator = "0.7.0"
env_logger = "0.9.0"
image = { version = "0.24.1", default-features = false, features = ["ico"] }
log = "0.4.14"
prettytable-rs = "0.8.0"
scopeguard = "1.1.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tempfile = "3.3.0"
zip = "0.5.13"

bevy = { version = "0.6.1", features = ["serialize"] }
bevy_easings = "0.6.0"
bevy_egui = "0.11.1"
bevy_kira_audio = "0.8.0"
bevy_tiled_camera = "0.3.0"
rfd = "0.8.0"
winit = "0.26.1"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dev-dependencies]
base64 = "0.13.0"
serde = "1.0.136"
serde-bytes-repr = "0.1.5"
serde_json = "1.0.79"
toml = "0.5.8"
