[package]
name = "tgbr"
version = "0.2.1"
edition = "2021"
authors = ["Hideyuki Tanaka <tanaka.hideyuki@gmail.com>"]
license = "MIT"
description = "GameBoy emulator"
repository = "https://github.com/tanakh/tgbr"
readme = "README.md"
categories = ["emulators"]
keywords = ["emulators", "gameboy"]

[dependencies]
ambassador = "0.3.1"
anyhow = "1.0.58"
bincode = "1.3.3"
bitvec = "1.0.0"
bytesize = "1.1.0"
chrono = { version = "0.4.19", features = ["serde"] }
log = "0.4.17"
serde = { version = "1.0.138", features = ["derive"] }
serde_bytes = "0.11.6"
sha2 = "0.10.2"
