[package]
name = "tgbr"
version = "0.3.0"
edition = "2021"
authors = ["Hideyuki Tanaka <tanaka.hideyuki@gmail.com>"]
license = "MIT"
description = "GameBoy emulator"
repository = "https://github.com/tanakh/tgbr"
readme = "README.md"
categories = ["emulators"]
keywords = ["emulators", "gameboy"]

[dependencies]
meru-interface = "0.2.0"

ambassador = "0.3.2"
bincode = "1.3.3"
bitvec = "1.0.1"
bytesize = "1.1.0"
chrono = { version = "0.4.22", features = ["serde"] }
log = "0.4.17"
serde = { version = "1.0.143", features = ["derive"] }
serde_bytes = "0.11.7"
sha2 = "0.10.2"
thiserror = "1.0.32"

[dev-dependencies]
anyhow = "=1.0.59"
