[package]
name = "tgbr-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
bitvec = "1.0.0"
bytesize = "1.1.0"
ciborium = "0.2.0"
log = "0.4.14"
serde = { version = "1.0.136", features = ["derive", "rc"] }
serde_bytes = "0.11.5"
sha2 = "0.10.1"
