[package]
name = "tgbr-core"
version = "0.1.0"
edition = "2021"
authors = ["Hideyuki Tanaka <tanaka.hideyuki@gmail.com>"]
license = "MIT"
description = "GameBoy emulation library"
repository = "https://github.com/tanakh/tgbr"
readme = "README.md"

[dependencies]
ambassador = "0.2.1"
anyhow = "1.0.55"
bitvec = "1.0.0"
bytesize = "1.1.0"
chrono = { version = "0.4.19", features = ["serde"] }
ciborium = "0.2.0"
log = "0.4.14"
serde = { version = "1.0.136", features = ["derive"] }
serde_bytes = "0.11.5"
sha2 = "0.10.2"
